# Polaris

./: .gitignore  DEMARCHE.md  README.md  benchmark.py  benchmark_gemma.py  benchmark_llama_cpp.py  gemma_cascade.py  gemma_model.py  gemma_prompt.py  infer_with_grammar.py  main.py  main_cascade.py  pyproject.toml  requirements.txt
data/: seeds.jsonl
data/expected/: tpch_seed_002_sort_limit.parquet  tpch_seed_003_groupby_count.parquet  tpch_seed_004_join.parquet  tpch_seed_005_revenue_by_nation_1994.parquet  tpch_seed_006_q1_1995_count.parquet  tpch_seed_007_string_contains.parquet  tpch_seed_010_semi_join.parquet  tpch_seed_011_bool_or_filter.parquet  tpch_seed_012_not_filter.parquet  tpch_seed_013_n_unique.parquet  tpch_seed_014_cast.parquet  tpch_seed_015_str_starts_with.parquet  tpch_seed_016_dt_year_groupby.parquet  tpch_seed_017_multi_agg_list.parquet  tpch_seed_018_groupby_multi.parquet  tpch_seed_019_with_columns_multi.parquet  tpch_seed_020_rename.parquet  tpch_seed_021_unique_noargs.parquet  tpch_seed_022_left_join.parquet  tpch_seed_023_three_way_join_arith.parquet  tpch_seed_024_bool_and_date.parquet  tpch_seed_025_dt_month_filter.parquet
dataset/: build_seeds.py  build_sft.py  compare.py  executor.py  gen_tpch.py  hashing.py  polars_grammar.py  schema.py  seeds.py  spider_loader.py  spider_setup.py  sql_oracle.py
test_gram/: grammar.gbnf  test_gram.py  test_more.py  test_vllm.py
test_json_generator/: bench_json.py  json_query_generator.py
tests/: test_gemma_cascade.py  test_gemma_prompt.py  test_llama_grammar.py
(+13 files in other folders)
