[project]
name = "polaris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "duckdb>=1.1.0",
    "fastapi>=0.136.0",
    "polars>=1.20.0",
    "pydantic>=2.13.2",
    "torch>=2.11.0",
    "transformers>=5.5.4",
]
